--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -7,10 +7,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4 # Updated to v4
 
       - name: set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4 # Updated to v4
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -22,7 +22,7 @@ jobs:
         run: npm run build
 
       - name: Capacitor Sync
-        run: npx cap sync
+        run: npx cap sync android
 
       - name: Build APK
         run: |
@@ -31,7 +31,7 @@ jobs:
           ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4 # THIS FIXES YOUR ERROR
         with:
           name: Ambika-Captain-APK
           path: android/app/build/outputs/apk/debug/app-debug.apk
