--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -7,13 +7,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4 # Updated to v4
+      - uses: actions/checkout@v4
 
       - name: set up JDK 17
-        uses: actions/setup-java@v4 # Updated to v4
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
+
+      - name: Setup Node.js 22
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22' # This fixes the Capacitor CLI error
 
       - name: Install Dependencies
         run: npm install
@@ -31,7 +36,7 @@ jobs:
           ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v4 # THIS FIXES YOUR ERROR
+        uses: actions/upload-artifact@v4
         with:
           name: Ambika-Captain-APK
           path: android/app/build/outputs/apk/debug/app-debug.apk
