--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -9,16 +9,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: set up JDK 17
+      - name: set up JDK 21 # UPDATED FROM 17 TO 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21' 
           distribution: 'temurin'
 
       - name: Setup Node.js 22
         uses: actions/setup-node@v4
         with:
-          node-version: '22' # This fixes the Capacitor CLI error
+          node-version: '22'
 
       - name: Install Dependencies
         run: npm install
