--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "firebase": "^12.9.0",
     "framer-motion": "^12.34.0",
     "html-to-image": "^1.11.13",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.564.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
